<resources>
    <string name="app_name">BookStore</string>
    <string name="login">Login</string>\
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="telephone_number">Telephone number</string>
    <string name="register">Register</string>
    <string name="username" />
    <string name="change_nphoto" />
    <string name="rubles"> руб.</string>
    <string name="empty">Empty!</string>
    <string name="amount_0_check">Amount > 0!</string>>
    <string name="email_regex_check">Incorrect email format</string>
    <string name="phone_regex_check">Incorrect phone format</string>
    <string name="characters12">12 characters</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="logout">Logout</string>
    <string name="different_values">Should be different</string>
    <string name="password_match">Don\'t match previous password</string>
    <string name="email_used">This email already used</string>
    <string name="login_used">This login already used</string>
    <string name="number_used">This phone already used</string>
    <string name="characters6">6 characters</string>
    <string name="wishlist">WishList</string>
    <string name="books">Books</string>
    <string name="cart">Cart</string>
    <string name="system">System</string>
    <string name="profile">Profile</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="header_background_image">header background image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="title2">Title:</string>
    <string name="author">Author</string>
    <string name="author2">Author:</string>
    <string name="year">Year</string>
    <string name="year2">Year:</string>
    <string name="price">Price</string>
    <string name="bookimage">bookImage</string>
    <string name="isbn">ISBN:</string>
    <string name="publisher">Publisher:</string>
    <string name="pages">Pages:</string>
    <string name="in_stock">In stock:</string>
    <string name="genre">Genres:</string>
    <string name="author_image">author image</string>
    <string name="orders">Orders</string>
    <string name="order">Order</string>
    <string name="articles">Articles:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="ok">OK</string>
    <string name="change_password2">Change Password</string>
    <string name="settings_pwd_equal">Password match</string>
    <string name="settings_pwd_not_equal">Password not match</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="comments">Comments</string>
    <string name="book_image">Book image</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="user">User:</string>
    <string name="add">add</string>
    <string name="amount">Amount</string>
    <string name="how_many_books">How many books?</string>
    <string name="buy">Buy</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="previous_password">Previous password</string>
    <string name="enter_comment">Enter comment</string>
    <string name="send">Send</string>
    <string name="parent_genre">Parent genre</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="publisher_create">Publisher create</string>
    <string name="publisher_name">Publisher name</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="rate_book">Rate book</string>
    <string name="status">Status:</string>
    <string name="total_price">Total Price:</string>
    <string name="change_info">Change info</string>
    <string name="middle_name">Middle Name</string>
    <string name="image_url">Image url</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="add_genre">Add genre</string>
    <string name="add_publisher">Add publisher</string>
    <string name="add_author">Add author</string>
    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="too_big_comment">Too big comment</string>
    <string name="password_not_match">Password not match</string>
    <string name="one_field_error">At least one field must be filled</string>
    <string name="incorrect_url">Incorrect URL</string>
    <string name="no_connection_error">Error connecting the device to the server. Please try again.</string>
    <string name="no_network_error">No network access</string>
    <string name="bad_url_error">Bad URL request</string>
    <string name="data_parse_error">Data parsing error</string>
    <string name="oom_error">Out of memory error. Check memory and try again</string>
    <string name="server_error">Internal server error</string>
    <string name="timed_out_error">Connection has timed out</string>
    <string name="unknown_error">Unknown error occurred</string>
</resources>