<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_books"
                android:title="@string/books"/>
            <item
                android:id="@+id/nav_wishlist"
                android:title="@string/wishlist"/>
            <item
                android:id="@+id/nav_cart"
                android:title="@string/cart" />
            <item
                android:id="@+id/nav_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_orders"
                android:title="@string/orders"/>
            <item
                android:id="@+id/nav_add_genre"
                android:title="@string/add_genre"/>
            <item
                android:id="@+id/nav_add_publisher"
                android:title="@string/add_publisher"/>
            <item
                android:id="@+id/nav_add_author"
                android:title="@string/add_author"/>
        </group>
</menu>