<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/cancel_publisher_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/pubisher_address_edit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/add_publisher_data"
        app:layout_constraintTop_toBottomOf="@+id/pubisher_address_edit" />

    <Button
        android:id="@+id/add_publisher_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/cancel_publisher_data"
        app:layout_constraintStart_toStartOf="@+id/pubisher_address_edit"
        app:layout_constraintTop_toBottomOf="@+id/pubisher_address_edit" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/publisher_create"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/pubisher_address_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/pubisher_email_edit"
        app:layout_constraintStart_toStartOf="@+id/pubisher_email_edit"
        app:layout_constraintTop_toBottomOf="@+id/pubisher_email_edit"
        app:met_baseColor="#111"
        app:met_errorColor="#E53935"
        app:met_floatingLabel="highlight"
        app:met_minCharacters="1"
        app:met_primaryColor="#000000" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/pubisher_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/publisher_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:met_baseColor="#111"
        app:met_errorColor="#E53935"
        app:met_floatingLabel="highlight"
        app:met_minCharacters="1"
        app:met_primaryColor="#000000" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/pubisher_email_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/pubisher_name_edit"
        app:layout_constraintStart_toStartOf="@+id/pubisher_name_edit"
        app:layout_constraintTop_toBottomOf="@+id/pubisher_name_edit"
        app:met_baseColor="#111"
        app:met_errorColor="#E53935"
        app:met_floatingLabel="highlight"
        app:met_minCharacters="1"
        app:met_primaryColor="#000000" />
</androidx.constraintlayout.widget.ConstraintLayout>