<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/cancel_dialog_button"
        app:layout_constraintStart_toStartOf="@+id/amount_dialog"
        app:layout_constraintTop_toBottomOf="@+id/amount_dialog" />

    <Button
        android:id="@+id/cancel_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/amount_dialog"
        app:layout_constraintStart_toEndOf="@+id/add_dialog_button"
        app:layout_constraintTop_toBottomOf="@+id/amount_dialog" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/amount_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/amount"
        app:met_minCharacters="1"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:met_baseColor="#111"
        app:met_errorColor="#E53935"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="#000000" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/how_many_books"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/amount_dialog"
        app:layout_constraintStart_toStartOf="@+id/amount_dialog"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>