<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ChangeProfileInfoFragment">

    <Button
        android:id="@+id/change_profile_info"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/change_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/EditText_address"
        app:layout_constraintStart_toStartOf="@+id/EditText_address"
        app:layout_constraintTop_toBottomOf="@+id/EditText_address" />

    <TextView
        android:id="@+id/TextView_telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telephone"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EditText_phoneNumber"
        app:layout_constraintEnd_toEndOf="@+id/EditText_phoneNumber"
        app:layout_constraintStart_toStartOf="@+id/EditText_phoneNumber" />

    <TextView
        android:id="@+id/TextView_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EditText_address"
        app:layout_constraintEnd_toEndOf="@+id/EditText_address"
        app:layout_constraintStart_toStartOf="@+id/EditText_address" />

    <TextView
        android:id="@+id/TextView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EditText_email"
        app:layout_constraintEnd_toEndOf="@+id/EditText_email"
        app:layout_constraintStart_toStartOf="@+id/EditText_email" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/EditText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/EditText_phoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_baseColor="#111"
        app:met_errorColor="#E53935"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="#000000" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/EditText_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/address"
        app:layout_constraintBottom_toTopOf="@+id/change_profile_info"
        app:layout_constraintEnd_toEndOf="@+id/EditText_phoneNumber"
        app:layout_constraintStart_toStartOf="@+id/EditText_phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/EditText_phoneNumber"
        app:met_baseColor="#111"
        app:met_errorColor="#E53935"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="#000000" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/EditText_phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/telephone_number"
        app:layout_constraintBottom_toTopOf="@+id/EditText_address"
        app:layout_constraintEnd_toEndOf="@+id/EditText_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EditText_email"
        app:layout_constraintTop_toBottomOf="@+id/EditText_email"
        app:met_baseColor="#111"
        app:met_errorColor="#E53935"
        app:met_floatingLabel="highlight"
        app:met_helperText="Example: +79825273505"
        app:met_minCharacters="12"
        app:met_maxCharacters="12"
        app:met_primaryColor="#000000" />

</androidx.constraintlayout.widget.ConstraintLayout>